# OkapiRT

./: .gitignore  README.md
devertexwahn/: BUILD.bazel  MODULE.bazel  REUSE.toml  WORKSPACE.bzlmod
devertexwahn/bazel/bazelrc/: .bazelrc.remote_cache
devertexwahn/bazel/module/go/: BUILD.bazel  Go.MODULE.bazel  README.md  go.mod
devertexwahn/bazel/module/java/: Java.MODULE.bazel
devertexwahn/bazel/module/oci/: Oci.MODULE.bazel
devertexwahn/bazel/module/python/: Python.MODULE.bazel  README.md  requirements.in
devertexwahn/bazel/module/rust/: Rust.MODULE.bazel
devertexwahn/bazel/module/tools/: Tools.MODULE.bazel
devertexwahn/bazel/rules/rules_qt6/: README.md  copy.bara.sky
devertexwahn/ci/: macOS-13-apple-clang15.yaml  macOS-14-apple-clang15.yaml  macOS-14-clang14.yaml  macOS-15-apple-clang16.yaml  ubuntu-20.04-clang14.yaml  ubuntu-22.04-clang19.yaml  ubuntu-22.04-gcc11-dbg-part1.yaml  ubuntu-22.04-gcc11-dbg-part2.yaml  ubuntu-22.04-gcc11-fast-opt.yaml  ubuntu-24.04-bazel-query.yaml  ubuntu-24.04-coverage.yaml  ubuntu-24.04-gcc13-dbg-part1.yaml  ubuntu-24.04-gcc13-dbg-part2.yaml  ubuntu-24.04-gcc13-fast-opt.yaml  ubuntu-24.04-gcc13-flaky-test-detection.yaml  windows-2019-vs2019-dbg.yaml  windows-2019-vs2019-fastbuild.yaml  windows-2019-vs2019-opt.yaml  windows-2022-vs2022-dbg.yaml  windows-2022-vs2022-fastbuild.yaml  windows-2022-vs2022-opt.yaml  windows-2025-vs2022-dbg.yaml  windows-2025-vs2022-fastbuild.yaml  windows-2025-vs2022-opt.yaml
devertexwahn/okapi/: BUILD.bazel  command_line_arguments.cpp  command_line_arguments.hpp  command_line_arguments_test.cpp  print_version.cpp  print_version.hpp
devertexwahn/okapi/rendering/: BUILD.bazel  rendering.cpp  rendering.hpp
devertexwahn/okapi/rendering/integrator/: BUILD.bazel  rtiow_integrator.hpp  rtiow_integrator_test.cpp
devertexwahn/okapi/rendering/intersector/: BUILD.bazel  embree_intersector.h  embree_intersector.hpp  embree_intersector_test.cpp
devertexwahn/okapi/rendering/scene/: BUILD.bazel  load_scene.cpp  load_scene.h  load_scene.hpp  load_scene_test.cpp
devertexwahn/okapi/rendering/scene/shape/: BUILD.bazel  medium_event_test.cpp  moeller_trumbore.h  triangle_intersection_moeller_trumbore_test.cpp  triangle_mesh.h
devertexwahn/okapi/rendering/sensor/: BUILD.bazel  film.cpp  film.hpp  film_test.cpp  film_tile.hpp  film_tile_test.cpp  reconstruction_filter.hpp  reconstruction_filter_test.cpp  sensor.hpp  sensor_test.cpp  tile_generator.hpp  tile_generator_test.cpp
devertexwahn/okapi/rendering/shape/: BUILD.bazel  medium_event_test.cpp  moeller_trumbore.h  serialized_mesh.h  serialized_mesh_test.cpp  sphere.h  sphere_test.cpp  tiny_obj_loader_impl.cpp  triangle_intersection_moeller_trumbore_test.cpp  triangle_mesh.h  triangle_mesh_test.cpp
devertexwahn/okapi/res/: BUILD.bazel  win_res.bzl  winsdk_configure.bzl  winsdk_toolchain.bzl
devertexwahn/okapi/scenes/: BUILD.bazel
devertexwahn/okapi/scenes/ajax/: README.md  ajax.ao.exr  ajax.ao.mitsuba.xml  ajax.ao.okapi.xml  ajax.normal.brute.force.okapi.xml  ajax.normal.octree.okapi.xml  ajax.normal.okapi.xml  ajax.normal.spp1.brute_force.xml  ajax.normal.spp1.embree.exr  ajax.normal.spp1.embree.xml  ajax.normal.spp1.octree.exr  ajax.normal.spp1.octree.xml  ajax.simple.exr  ajax.simple.okapi.xml  imagegen.py  mitsuba_reference.py  performance.json
devertexwahn/okapi/scenes/ajax/reference_images/: ajax.ao.spp1.embree.exr  ajax.ao.spp1.octree.exr  ajax.ao.spp1024.embree.exr  ajax.ao.spp1024.octree.exr  ajax.ao.spp128.embree.exr  ajax.ao.spp128.octree.exr  ajax.ao.spp16.embree.exr  ajax.ao.spp16.octree.exr  ajax.ao.spp2.embree.exr  ajax.ao.spp2.octree.exr  ajax.ao.spp2048.embree.exr  ajax.ao.spp2048.octree.exr  ajax.ao.spp256.embree.exr  ajax.ao.spp256.octree.exr  ajax.ao.spp32.embree.exr  ajax.ao.spp32.octree.exr  ajax.ao.spp4.embree.exr  ajax.ao.spp4.octree.exr  ajax.ao.spp4096.embree.exr  ajax.ao.spp4096.octree.exr  ajax.ao.spp512.embree.exr  ajax.ao.spp512.octree.exr  (+6 more)
devertexwahn/okapi/scenes/bunny/: README.md  bunny.ao.exr  bunny.ao.okapi.xml  bunny.hit.okapi.xml  bunny.normal.brute.force.okapi.xml  bunny.normal.exr  bunny.normal.octree.okapi.xml  bunny.normal.okapi.xml  matpreview.exr  matpreview.okapi.xml
devertexwahn/okapi/scenes/cornell_box/: README.md  cornel_box.naive_diffuse.spp1.embree.ci.exr  cornell_box.aov.integrator.spp1.mitsuba.xml  cornell_box.mirror.path.integrator.spp1.mitsuba.xml  cornell_box.naive.diffuse.aovs.okapi.xml  cornell_box.naive.diffuse.okapi.ci.xml  cornell_box.naive.diffuse.okapi.yaml  cornell_box.normal.okapi.xml  cornell_box.okapi.xml  cornell_box.path.integrator.spp1.mitsuba.xml  imagegen.py  imagegen2.py  imagegen3.py  mitsuba_aov.py  mitsuba_mirror_reference.py  mitsuba_reference.py  mitsuba_reference_spectral.py  requirements.txt
devertexwahn/okapi/scenes/cornell_box_with_spheres/: README.md  cornell_box_with_spheres.next.mitsuba_v4.xml  cornell_box_with_spheres.next.okapi.xml  cornell_box_with_spheres.next.okapi_v3.xml  cornell_box_with_spheres.next.okapi_v4.xml  mitsuba_reference_v4.py  modified_phong_brdf.md  modified_phong_brdf.okapi.xml
devertexwahn/okapi/scenes/sphere/: README.md  performance.json  sphere.ao.exr  sphere.ao.okapi.xml  sphere.diffuse.okapi.xml  sphere.hit.exr  sphere.hit.okapi.xml  sphere.normal.exr  sphere.normal.okapi.xml  sphere.normal_no_abs.okapi.xml  sphere.rtiow.okapi.xml  sphere.simple.missing_position_attribute.okapi.xml  sphere.simple.okapi.xml  sphere_no_abs_normals.normal.exr
devertexwahn/okapi/tests/scenes/: BUILD.bazel  ReferencingNonExistingObj.ao.okapi.xml
devertexwahn/okapi/ui/: BUILD.bazel  about_dialog.cpp  about_dialog.hpp  about_dialog.ui  camera.cpp  camera.hpp  camera_test.cpp  license_notes.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  okapi.ui.qss  render_preview_thread.cpp  render_preview_thread.hpp  render_scene_thread.cpp  render_scene_thread.hpp  render_state.hpp  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui  viewport.cpp  viewport.hpp  viewport_camera_transform.cpp  viewport_camera_transform.hpp  viewport_tests.cpp
(+25 files in other folders)
