"""
    SPDX-FileCopyrightText: Copyright 2024 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

"""de_vertexwahn build and test dependencies."""

module(
    name = "de_vertexwahn",
    version = "0.0.0",
    compatibility_level = 1,
)

#bazel_dep(name = "libjpeg_turbo", version = "2.1.91")  # Does not compile on windows, does not uses nasm to build
#bazel_dep(name = "boost.beast", version = "1.83.0.bcr.1")  # Does currently not work. Once this works again benchmark should be fixed again

bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "apple_support", version = "1.16.0")
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc8")
bazel_dep(name = "autodiff", version = "1.0.3")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_sonarqube", version = "1.0.2")
bazel_dep(name = "boost.algorithm", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.asio", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.core", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.predef", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.program_options", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.uuid", version = "1.83.0.bcr.1")
bazel_dep(name = "cpuinfo", version = "0.0.0-20240417-3c8b153")
bazel_dep(name = "eigen", version = "3.4.0.bcr.1")
bazel_dep(name = "embree", version = "4.3.1")
bazel_dep(name = "flip", version = "1.4")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "gazelle", version = "0.38.0")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "hypothesis", version = "0.0.0-20240425-3acfea6")
bazel_dep(name = "imath", version = "3.1.11.bcr.1")
bazel_dep(name = "libdeflate", version = "1.21")
bazel_dep(name = "libjpeg_turbo", version = "2.1.4")
bazel_dep(name = "libpng", version = "1.6.43")
bazel_dep(name = "libwebp", version = "1.4.0")
bazel_dep(name = "nasm", version = "2.14.02")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "onetbb", version = "2021.13.0")
bazel_dep(name = "openexr", version = "3.2.4")
bazel_dep(name = "pcg", version = "0.98.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "pugixml", version = "1.14.bcr.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_cuda", version = "0.2.1")
bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "rules_java", version = "7.9.0")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_oci", version = "1.6.0")  # version = "1.7.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "spdlog", version = "1.14.1")
bazel_dep(name = "tinyobjloader", version = "2.0.0-rc1")  # Waiting for migration
bazel_dep(name = "xtensor")
bazel_dep(name = "xtl")  # bazel_dep(name = "xtl", version = "0.7.7")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

bazel_dep(name = "bazel_iwyu", version = "0.0.1", dev_dependency = True)

#git_override(
#    module_name = "bazel_iwyu",
#    commit = "85cbd99369a3ed3f8c31234d2d887026f3e66bbc",
#    remote = "https://github.com/TendTo/bazel_iwyu",
#)
local_path_override(
    module_name = "bazel_iwyu",
    path = "../third_party/bazel_iwyu-85cbd99369a3ed3f8c31234d2d887026f3e66bbc",
)

bazel_dep(name = "catch2", version = "3.5.4", dev_dependency = True)
bazel_dep(name = "container_structure_test", version = "1.16.0", dev_dependency = True)
bazel_dep(name = "depend_on_what_you_use", version = "0.3.0", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.5", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.15.0", dev_dependency = True)

# Try to switch to glfw bzlmod version
#bazel_dep(name = "glfw")
#local_path_override(
#    module_name = "glfw",
#    path = "../third_party/glfw-3.4",
#)

# This projects intends to stay as close as possible to upstream dependencies (Live at Head). Therefore, upstream
# dependencies are copied on a regular basis 1:1 with some Bazel related patches (if needed) to the `third_party` folder
# and overridden here. If you do not like this approach you can simply remove most of the local_path_override's here and
# live with the newest versions in the BCR (which can be much older).
# Note: Some dependencies are not part in the BCR and therefore a local_path_override might be needed
# here for some libraries.

local_path_override(
    module_name = "abseil-cpp",
    path = "../third_party/abseil-cpp",
)

local_path_override(
    module_name = "autodiff",
    path = "../third_party/autodiff",
)

local_path_override(
    module_name = "bazel_skylib",
    path = "../third_party/bazel-skylib",
)

local_path_override(
    module_name = "cpuinfo",
    path = "../third_party/cpuinfo",
)

# Seems not to be needed anymore
#bazel_dep(name = "delaunator-cpp", version = "0.0.0-20181007-c1521f6")
#local_path_override(
#    module_name = "delaunator-cpp",
#    path = "../third_party/delaunator-cpp-c1521f6e879881232dcddabd6c2ddb6187e8714b",
#)

local_path_override(
    module_name = "flip",
    path = "../third_party/flip-1.4",
)

#local_path_override(
#    module_name = "fmt",
#    path = "../third_party/fmt",
#)

local_path_override(
    module_name = "hypothesis",
    path = "../third_party/hypothesis",
)

local_path_override(
    module_name = "imath",
    path = "../third_party/Imath",
)

local_path_override(
    module_name = "libpng",
    path = "../third_party/libpng-1.6.43",
)

local_path_override(
    module_name = "nasm",
    path = "../third_party/nasm-2.14.02",
)

local_path_override(
    module_name = "onetbb",
    path = "../third_party/oneTBB",
)

local_path_override(
    module_name = "openexr",
    path = "../third_party/openexr",
)

local_path_override(
    module_name = "pcg",
    path = "../third_party/pcg-cpp",
)

local_path_override(
    module_name = "pugixml",
    path = "../third_party/pugixml",
)

local_path_override(
    module_name = "rules_cuda",
    path = "../third_party/rules_cuda",
)

local_path_override(
    module_name = "rules_pkg",
    path = "../third_party/rules_pkg-1.0.1",
)

local_path_override(
    module_name = "spdlog",
    path = "../third_party/spdlog",
)

local_path_override(
    module_name = "tinyobjloader",
    path = "../third_party/tinyobjloader",
)

local_path_override(
    module_name = "xtensor",
    path = "../third_party/xtensor",
)

local_path_override(
    module_name = "xtl",
    path = "../third_party/xtl",
)

local_path_override(
    module_name = "yaml-cpp",
    path = "../third_party/yaml-cpp",
)

local_path_override(
    module_name = "catch2",
    path = "../third_party/Catch2",
)

#git_override(
#    module_name = "depend_on_what_you_use",
#    commit = "8c3fb3dddf7f2fc190652ae5644c5e2c43a928b1",
#    remote = "https://github.com/martis42/depend_on_what_you_use",
#)

local_path_override(
    module_name = "depend_on_what_you_use",
    path = "../third_party/depend_on_what_you_use",
)

# Windows 2022 opt mode generates errors that my be related to mock methods...
local_path_override(
    module_name = "googletest",
    path = "../third_party/googletest",
)

#-------------------------------------------------------------------------------------
# LLVM toolchain for Bazel
#-------------------------------------------------------------------------------------

bazel_dep(name = "toolchains_llvm", version = "0.10.3")
git_override(
    module_name = "toolchains_llvm",
    commit = "bba94f8138ab454d70afcd263788b34e2801e2ba",
    remote = "https://github.com/bazel-contrib/toolchains_llvm.git",
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

LLVM_VERSIONS = {
    "": "16.0.0",  # Default version 16.0.0
    "darwin-aarch64": "16.0.5",
    "darwin-x86_64": "15.0.7",
}

llvm.toolchain(
    name = "llvm_toolchain",
    llvm_versions = LLVM_VERSIONS,
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

#-------------------------------------------------------------------------------------
# Python
#-------------------------------------------------------------------------------------

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

#python.toolchain(
#    python_version = "3.11",
#)
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "my_deps")

