"""
    SPDX-FileCopyrightText: Copyright 2022-2023 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

package(default_visibility = ["//visibility:public"])


cc_library(
    name = "embree_intersector",
    hdrs = ["embree_intersector.h"],
    deps = [
        "//flatland/rendering/intersector",
        "//flatland/rendering/scene",
        "//okapi/rendering/scene/shape:triangle_mesh",
        "@boost.predef//:predef",
        "@embree",
    ],
)

cc_test(
    name = "embree_intersector_test",
    size = "small",
    srcs = [
        "embree_intersector_test.cpp",
    ],
    data = ["//okapi/scenes"],
    deps = [
        ":embree_intersector",
        "@googletest//:gtest_main",
    ],
)

