"""
    SPDX-FileCopyrightText: Copyright 2022-2023 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "load_scene",
    srcs = ["load_scene.cpp"],
    hdrs = ["load_scene.hpp"],
    deps = [
        "//core:exception",
        "//core:object_factory",
        "//flatland/rendering/canvas:svg_canvas",
        "//flatland/rendering/intersector:brute_force_intersector",
        "//flatland/rendering/scene",
        "//flatland/rendering/scene:load_scene",
        #"//okapi/rendering/bsdf:dielectric",
        #"//okapi/rendering/bsdf:diffuse",
        #"//okapi/rendering/bsdf:mirror",
        #"//okapi/rendering/bsdf:phong",
        #"//okapi/rendering/integrator:ambient_occlusion",
        #"//okapi/rendering/integrator:aov",
        #"//okapi/rendering/integrator:hit_integrator",
        #"//okapi/rendering/integrator:next_integrator",
        #"//okapi/rendering/integrator:normal_integrator",
        #"//okapi/rendering/integrator:path_tracing_diffuse",
        #"//okapi/rendering/integrator:path_tracing_naive_diffuse",
        #"//okapi/rendering/integrator:simple_integrator",
        #"//okapi/rendering/integrator:whitted_integrator",
        "//okapi/rendering/intersector:embree_intersector",
        "//okapi/rendering/integrator:rtiow_integrator",
        #"//okapi/rendering/intersector:octree_intersector",
        #"//okapi/rendering/emitter:area_light",
        #"//okapi/rendering/shape:serialzied_mesh",
        "//okapi/rendering/shape:sphere",
        "//okapi/rendering/shape:triangle_mesh",
        "//okapi/rendering/sensor",
        "//okapi/rendering/sensor:film",
        "//okapi/rendering/sensor:reconstruction_filter",
        #"//okapi/rendering/texture",
        #"//okapi/rendering/texture:alpha_blended_texture",
        #"//okapi/rendering/texture:bitmap",
        #"//okapi/rendering/texture:checkerboard",
    ],
)


cc_test(
    name = "scene_test",
    timeout = "short",
    srcs = [
        "scene_test.cpp",
    ],
    data = [
        "//flatland/scenes",
        "//flatland/scenes/bunny:scenes",
        "//flatland/tests/scenes:test_scene_files",
        "//okapi/scenes",
    ],
    deps = [
        "//flatland/rendering",
        "//okapi/rendering",
        "//okapi/rendering/scene:load_scene",
        "@googletest//:gtest_main",
    ],
)
